--- a/tests/js/Carousel/live/live.css
+++ b/tests/js/Carousel/live/live.css
@@ -12,7 +12,7 @@ Author: Yuriy Ponomarev (mailto:yourick.po@gmail.com)
     margin: 0 auto;
 }
 .carousel .next_control, .carousel .previous_control {
-    left: 0;    
+    left: 0;
     width: 14px;
     height: 20px;
     margin-top: -10px;
@@ -22,32 +22,30 @@ Author: Yuriy Ponomarev (mailto:yourick.po@gmail.com)
     left: -14px;
     margin-left: 100%;
 }
-.carousel .previous_control { 
-	background-position: -32px -92px;
+.carousel .previous_control {
+    background-position: -32px -92px;
 }
 .carousel .next_control {
-	background-position: -48px -92px;
+    background-position: -48px -92px;
 }
 .carousel .previous_control i {
     _top: -92px;
     _left: -32px;
 }
-.carousel .next_control i {   
+.carousel .next_control i {
     _top: -92px;
     _left: -48px;
 }
 .carousel_viewbox {
     height: 88px;
     border-left: 1px solid #afafaf;
-    border-right: 1px solid #afafaf;    
+    border-right: 1px solid #afafaf;
 }
-.carousel_viewbox.big, .carousel_viewbox.big .item {
+.carousel_viewbox.big {
     height: 378px;
-    width: 501px;
 }
-.carousel_viewbox.small, .carousel_viewbox.small .item {
-    height: 70px;
-    width: 98px;
+.carousel_viewbox.small {
+    height: 88px;
 }
 .carousel_viewbox ul {
     padding: 0;
@@ -55,18 +53,22 @@ Author: Yuriy Ponomarev (mailto:yourick.po@gmail.com)
 .carousel_viewbox ul li {
     top: 0;
     margin: 0;
-    padding: 0 6px;
 }
-.carousel_viewbox.small ul li{
+.carousel_viewbox.small .item{
+    position: absolute;
     width: 98px;
+    height: 80px;
+    font-size: 25px;
 }
-.carousel_viewbox.big ul li {
+.carousel_viewbox.big .item {
     width: 538px;
+    height: 378px;
+    font-size: 120px;
 }
 .item {
-    padding: 3px;
+    padding: 3px 6px;
 }
-.carousel .item .active {
+.carousel .item.active {
     background: #fdd34e;
 }
 .item img {
@@ -82,11 +84,11 @@ Author: Yuriy Ponomarev (mailto:yourick.po@gmail.com)
 }
 .carousel .viewbox a:link, .carousel .viewbox a:visited, .carousel .viewbox a:hover, .carousel .viewbox a:active {
     text-decoration: none;
-	outline: 0;
+    outline: 0;
 }
 
 .icon, .icon8x12, .icon12x12, .icon16x16, .icon20x20, .icon24x24, .icon32x32 {
-    /*background: url("../images/common_icons.png") no-repeat scroll 100px 100px transparent;*/
+    background: url("common_icons.png") no-repeat scroll 100px 100px transparent;
     display: inline-block;
     overflow: hidden;
     position: relative;
