--- a/tests/js/Carousel/live/live.css
+++ b/tests/js/Carousel/live/live.css
@@ -59,7 +59,7 @@ Author: Yuriy Ponomarev (mailto:yourick.po@gmail.com)
 }
 
 .icon, .icon8x12, .icon12x12, .icon16x16, .icon20x20, .icon24x24, .icon32x32 {
-    background: url("common_icons.png") no-repeat scroll 100px 100px transparent;
+    background: url("../fixtures/common_icons.png") no-repeat scroll 100px 100px transparent;
     display: inline-block;
     overflow: hidden;
     position: relative;
